[] images in feeds no longer overflow their bounds

--- a/public/css/ofeeds.css
+++ b/public/css/ofeeds.css
@@ -36,6 +36,10 @@
 	color: #428bca;
 }
 
+.article-content img {
+	max-width:100%;
+}
+
 /* Side notes for calling out things
 -------------------------------------------------- */
  
